# sdet

./: .env  .gitignore  README.md  docker-compose.yml  run.sh
RobotTests/: requirements.txt
RobotTests/Tests/: Login.robot
RobotTests/Tests/Resourses/: login.resource
RobotTests/Tests/Suits/: login.robot
RobotTests/Tests/Variables/: login.robot
backend/: Dockerfile  backend-entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: auth.py
backend/app/core/: config.py
backend/app/interfaces/: auth_service.py
backend/app/services/: authenticator.py
backend/tests/: test_auth.py
frontend/: .env  Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.js  LoginForm.js
