[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Ivan Volodin <ivanwolodin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "^0.34.2"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.0"
pydantic = "^2.11.4"
orjson = "^3.10.18"
pydantic-settings = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
